deployment/sisyphus-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sisyphus-web
  namespace: ${NAMESPACE}
spec:
  selector:
    app: sisyphus-web
  ports:
    - name: http
      port: 80
      targetPort: 80
